syntax = "proto3";

package user;

service PostService {
    rpc CreatePost (Post) returns (CreatePostsRes);
    rpc DeletePost (DeleteByPostId) returns (DeletePostRes);
    rpc UpdatePost (Post) returns (UpdatePostRes);
    rpc Getallpost (GetAllByPostId) returns (Post1);
    rpc ListPosts (GetPostsReq) returns(GetPostsRes);
}

message GetPostsRes{
    repeated Post posts=1;
    int64 count=2;
}

message GetPostsReq{
    int64 limit=1;
    int64 page=2;
}
message CreatePostsRes{
    bool status=1;
    string time2=2;
}
message DeletePostRes{
    bool status=1;
    string time1=2;
}
message UpdatePostRes{
    bool status=1;
}
message Post {
    string id = 1;
    string name = 2;
    string description= 3;
    string user_id=4;
    repeated Medias medias=12;
}
message Post1 {
    repeated Post response=1;
}

 message Medias{
     string id=1;
     string posts_id =2;
     string link =3;
}
message DeleteByPostId{
    string id=1;
}
message GetAllByPostId{
    string id=1;
}